[package]
name = "taceo-eddsa-babyjubjub"
version = "0.5.2"
edition.workspace = true
rust-version.workspace = true
description = "An EdDSA signature scheme implementation over the Baby Jubjub elliptic curve using Poseidon2, useful for SNARK-friendliness."
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[dependencies]
ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "0.5" }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
ark-serialize = { workspace = true }
eyre = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true, features = ["bn254", "t8"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
zeroize = { workspace = true }
poseidon-ark = { git = "https://github.com/selfxyz/poseidon-ark" }
blake2 = "0.10.6"
